--- a/contact.html
+++ b/contact.html
@@ -148,13 +148,17 @@
       cursor:pointer;
       display:inline-flex;
       align-items:center;
-      gap:8px;
+      gap:10px;
       text-decoration:none;
       transition:background-color .3s;
     }
 
     .linkedin-btn:hover{
       background:#005885;
+    }
+
+    .linkedin-btn svg{
+      flex-shrink:0;
     }
 
     /* --- Contact Section --- */
@@ -295,14 +299,17 @@
         </div>
         <div class="profile-info">
           <h1>Angel Contreras</h1>
-          <h2>Full Stack Developer & IT Professional</h2>
+          <h2>CIS Major</h2>
           <p class="profile-description">
             CSULA student passionate about building innovative solutions and creating seamless digital experiences. 
             Skilled in full-stack development, IT management, and database design.
           </p>
           <p class="profile-details">Cal State LA Student | Aspiring Tech Professional</p>
           <a href="https://www.linkedin.com/in/angel-contreras-488539195/" class="linkedin-btn" target="_blank" rel="noopener">
-            <span>in</span> View Profile
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+              <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+            </svg>
+            View LinkedIn Profile
           </a>
         </div>
       </div>
@@ -312,24 +319,24 @@
 
       <!-- Contact Methods -->
       <div class="contact-grid">
-        <a href="mailto:angel@example.com" class="contact-card">
+        <a href="mailto:acontr126@calstatela.edu" class="contact-card">
           <div class="contact-icon">
             <svg viewBox="0 0 24 24">
               <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
             </svg>
           </div>
           <h3>Email Me</h3>
-          <p>angel@example.com</p>
+          <p>acontr126@calstatela.edu</p>
         </a>
 
-        <a href="tel:+15555555555" class="contact-card">
+        <a href="tel:+12132921901" class="contact-card">
           <div class="contact-icon">
             <svg viewBox="0 0 24 24">
               <path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>
             </svg>
           </div>
           <h3>Call Me</h3>
-          <p>+1 (555) 555-5555</p>
+          <p>(213) 292-1901</p>
         </a>
       </div>
 
@@ -341,7 +348,7 @@
   <!-- Footer -->
   <footer class="footer">
     <nav class="links" aria-label="Footer">
-      <a href="mailto:angel@example.com">Email</a>
+      <a href="mailto:acontr126@calstatela.edu">Email</a>
       <a href="https://www.linkedin.com/in/angel-contreras-488539195/" target="_blank" rel="noopener">LinkedIn</a>
       <a href="https://github.com" target="_blank" rel="noopener">GitHub</a>
       <a href="index.html#portfolio">Portfolio</a>
