--- a/contact.html
+++ b/contact.html
@@ -313,7 +313,7 @@
       <!-- Profile Card -->
       <div class="profile-card">
         <div class="profile-image">
-          <img src="thumbnail_ln.JPG" alt="Angel Contreras Professional Headshot">
+          <img src="thumbnail_ln.jpg" alt="Angel Contreras Professional Headshot">
         </div>
         <div class="profile-info">
           <h1>Angel Contreras</h1>
